<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditarPartido" >

    <TextView
        android:id="@+id/editarPartidoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/editarPartido"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/agregarPartidoCard"
        android:layout_width="385dp"
        android:layout_height="479dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPartidoTitle">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputRival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/cantidad_hint"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/rival_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/rival_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:text="@string/surAlta"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputSurAlta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/cantidad_hint"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#757575"
                        android:textSize="18sp"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/surBaja"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputSurBaja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/cantidad_hint"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#757575"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/norte"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputNorte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/cantidad_hint"
                        android:ems="10"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textColorHint="#757575" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/Este"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputEste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColorHint="#757575"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/Oeste"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputOeste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textColorHint="#757575" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/Visitante"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputVisitante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/cantidad_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textColorHint="#757575" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="Torneo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputTorneo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Torneo"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:text="Dia"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Dia"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:text="Mes"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputMes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Mes"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:text="Hora"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="HH:MM"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="215dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:text="Torneo"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputFechaTorneo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Fecha Torneo"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Habilitar para compra de entrada" />


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/editarPartidoBtn"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/velez"
        android:text="@string/editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregarPartidoCard" />

</androidx.constraintlayout.widget.ConstraintLayout>